// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render states of the tokenizer Custom container class 1`] = `
<div
  className="filter-tokenizer foo"
>
  <span
    className="input-group-addon left-addon"
    data-for="structured-query-tooltip"
    data-tip="Save Search"
    onClick={[Function]}
    style={
      Object {
        "background": "lightgrey",
        "cursor": "not-allowed",
      }
    }
  >
    <i
      className="fal fa-save"
    />
  </span>
  <span
    className="input-group-addon left-addon"
    data-for="structured-query-tooltip"
    data-tip="View Filters"
    onClick={[Function]}
    style={
      Object {
        "background": "lightgrey",
        "borderRadius": 0,
        "cursor": "not-allowed",
        "position": "relative",
      }
    }
  >
    <i
      className="far fa-list"
    />
    <span
      className="active-filter-count"
    >
      0
    </span>
  </span>
  <div
    className="token-collection"
    onClick={[Function]}
  >
    <div
      className="filter-input-group"
    >
      <div
        className="filter-category"
      >
        
      </div>
      <div
        className="filter-operator"
      >
        
      </div>
      <div
        className="typeahead"
      >
        <input
          className="filter-tokenizer-text-input"
          disabled={false}
          onChange={[Function]}
          onKeyDown={[Function]}
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
  <div>
    {"id":"structured-query-tooltip","place":"top","type":"dark","effect":"solid","multiline":false}
  </div>
</div>
`;

exports[`Render states of the tokenizer Default render 1`] = `
<div
  className="filter-tokenizer"
>
  <span
    className="input-group-addon left-addon"
    data-for="structured-query-tooltip"
    data-tip="Save Search"
    onClick={[Function]}
    style={
      Object {
        "background": "lightgrey",
        "cursor": "not-allowed",
      }
    }
  >
    <i
      className="fal fa-save"
    />
  </span>
  <span
    className="input-group-addon left-addon"
    data-for="structured-query-tooltip"
    data-tip="View Filters"
    onClick={[Function]}
    style={
      Object {
        "background": "lightgrey",
        "borderRadius": 0,
        "cursor": "not-allowed",
        "position": "relative",
      }
    }
  >
    <i
      className="far fa-list"
    />
    <span
      className="active-filter-count"
    >
      0
    </span>
  </span>
  <div
    className="token-collection"
    onClick={[Function]}
  >
    <div
      className="filter-input-group"
    >
      <div
        className="filter-category"
      >
        
      </div>
      <div
        className="filter-operator"
      >
        
      </div>
      <div
        className="typeahead"
      >
        <input
          className="filter-tokenizer-text-input"
          disabled={false}
          onChange={[Function]}
          onKeyDown={[Function]}
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
  <div>
    {"id":"structured-query-tooltip","place":"top","type":"dark","effect":"solid","multiline":false}
  </div>
</div>
`;

exports[`Render states of the tokenizer Disabled filter 1`] = `
<div
  className="filter-tokenizer filter-disabled"
>
  <span
    className="input-group-addon left-addon"
    data-for="structured-query-tooltip"
    data-tip="Save Search"
    onClick={[Function]}
    style={
      Object {
        "background": "lightgrey",
        "cursor": "not-allowed",
      }
    }
  >
    <i
      className="fal fa-save"
    />
  </span>
  <span
    className="input-group-addon left-addon"
    data-for="structured-query-tooltip"
    data-tip="View Filters"
    onClick={[Function]}
    style={
      Object {
        "background": "lightgrey",
        "borderRadius": 0,
        "cursor": "not-allowed",
        "position": "relative",
      }
    }
  >
    <i
      className="far fa-list"
    />
    <span
      className="active-filter-count"
    >
      0
    </span>
  </span>
  <div
    className="token-collection"
    onClick={[Function]}
  >
    <div
      className="filter-input-group"
    >
      <div
        className="filter-category"
      >
        
      </div>
      <div
        className="filter-operator"
      >
        
      </div>
      <div
        className="typeahead"
      >
        <input
          className="filter-tokenizer-text-input"
          disabled={true}
          onChange={[Function]}
          onKeyDown={[Function]}
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
  <div>
    {"id":"structured-query-tooltip","place":"top","type":"dark","effect":"solid","multiline":false}
  </div>
</div>
`;

exports[`Render states of the tokenizer Export search callback 1`] = `
<div
  className="filter-tokenizer"
>
  <span
    className="input-group-addon left-addon cursor-pointer"
    data-for="structured-query-tooltip"
    data-tip="Save Search"
    onClick={[Function]}
    style={
      Object {
        "background": "white",
        "cursor": "pointer",
      }
    }
  >
    <i
      className="fal fa-save"
    />
  </span>
  <span
    className="input-group-addon left-addon"
    data-for="structured-query-tooltip"
    data-tip="View Filters"
    onClick={[Function]}
    style={
      Object {
        "background": "lightgrey",
        "borderRadius": 0,
        "cursor": "not-allowed",
        "position": "relative",
      }
    }
  >
    <i
      className="far fa-list"
    />
    <span
      className="active-filter-count"
    >
      0
    </span>
  </span>
  <div
    className="token-collection"
    onClick={[Function]}
  >
    <div
      className="filter-input-group"
    >
      <div
        className="filter-category"
      >
        
      </div>
      <div
        className="filter-operator"
      >
        
      </div>
      <div
        className="typeahead"
      >
        <input
          className="filter-tokenizer-text-input"
          disabled={false}
          onChange={[Function]}
          onKeyDown={[Function]}
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
  <div>
    {"id":"structured-query-tooltip","place":"top","type":"dark","effect":"solid","multiline":false}
  </div>
</div>
`;
